Exekutagarria funtzionatzen du, CMSKudeatzaileTest ez doa